--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/iconx/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/iconx/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="وبسایت آموزشی کوله‌پشتی، محلی برای یادگیری و پرورش مهارت‌های مختلف کودکان و نوجوانان می‌باشد."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
