--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/iconx/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="/iconx/android-chrome-192x192.png" type="image/png" />
     <link rel="apple-touch-icon" href="/iconx/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
